--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
-a{
-    width:100px;
-}
+.home_header .home_top {
+  width: 100%;
+  background: #000; }
+  .home_header .home_top ul {
+    height: 32px;
+    width: 800px; }
+  .home_header .home_top ul li {
+    width: 30px;
+    height: 20px;
+    text-align: center; }
+    .home_header .home_top ul li a {
+      text-align: center;
+      float: left;
+      color: #999; }
