--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,3 +1,21 @@
-header{
-    width:100px;
+.home_header{
+    .home_top{
+        width:100%;
+        background:#000;
+        ul{
+            height:32px;
+            width:800px;
+        }
+        ul li {
+            width:30px;
+            height:20px;
+                text-align: center;
+
+            a{
+                text-align: center;
+                float: left;
+                color:#999;
+            }
+        }
+    }
 }
