--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,9 +2,10 @@
     .home_top{
         width:100%;
         background:#000;
+        display: flex;
+        justify-content: space-between;
         ul{
-            height:32px;
-            width:800px;
+            display: flex;            
         }
         ul li {
             width:30px;
